Fix sizing and alignment of app contents
The app should have a max width on desktop for better usability.

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -6,15 +6,17 @@ body {
 	margin: 0 auto;
 	background-color: var(--color-app-background);
 	font-family: var(--font-family-primary);
-	text-align: center;
+	text-align: left;
 	color: var(--color-app-text);
 }
 .app {
-	display: inline-block;
+	margin: 0 auto;
+	max-width: 550px;
 	padding: 0 30px;
 }
 h1 {
 	margin-top: 2rem;
+	text-align: center;
 }
 a {
 	color: var(--color-blue);
